--- a/locations-solution/pom.xml
+++ b/locations-solution/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>training</groupId>
-    <artifactId>senior-solutions</artifactId>
+    <artifactId>locations-solution</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
