--- a/locations-spring-solution/src/main/resources/application.properties
+++ b/locations-spring-solution/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3307/employees
+spring.datasource.username=employees
+spring.datasource.password=employees
+spring.jpa.hibernate.ddl-auto=create-drop
